--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png">
 
-  <title>example</title>
+  <title>CoffeeMondo</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -46,7 +46,7 @@
   <script src="main.dart.js" type="application/javascript"></script>
 
 
-<script id="versionInfo">const appName = 'example';
+<script id="versionInfo">const appName = 'CoffeeMondo';
 const buildNumber = '1';
 const version = '1.0.0';</script>
 </body></html>
