crearEvento 50% version web

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,8 @@
       });
     }
   </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-m9M_6qRLU1jAKaVSaX12puFKZWZ9s-Y"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest" type="application/javascript"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script>
